fixed broken form alignment upon reloading page

--- a/week-8/prove/style.css
+++ b/week-8/prove/style.css
@@ -24,7 +24,7 @@ body.defeated {
     background-color: #faf2d5;
     box-shadow: 1px 1px 6px black;
 }
-form {
+#what2Gen {
     display: flex;
     flex-direction: column;
     align-items: center;
